# agent.nvim

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: opencode.yml
nvim-plugin/lua/agent_amp/: init.lua  lsp.lua  spinner.lua
nvim-plugin/plugin/: agent_amp.lua
nvim-plugin/tests/: init_spec.lua  run_tests.sh  spinner_spec.lua
src/: amp.rs  backend.rs  claude_code.rs  config.rs  document_store.rs  handlers.rs  job_queue.rs  job_tracker.rs  lsp_utils.rs  main.rs  opencode.rs  utils.rs
tasks/: prd-claude-code-backend.md  prd-visual-selection-implementation.md
tests/: e2e_test.rs
