[package]
name = "agent-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
diffy = "0.4.2"
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.24.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
libc = "0.2"
